# court-booking

./: .dockerignore  .env.sample  .gitignore  2.html  3.html  4.html  DOCUMENTATION.md  Dockerfile  FacilityAvailability.py  FacilityInformation.py  PerfectMindSession.py  README.md  TWILIO_SETUP.md  app.py  book_court.py  check_availability.py  court-info.json  court1.html  court_date.py  debug_api.py  debug_detailed.py  debug_response.json  debug_response_test_2.json  debug_specific_date.py  extract_form_data.py  get_court_availability.py  import bs4.py  knownIssues.txt  pyproject.toml  query_date.py  query_specific_date.py  schduler.html  sms_notifier.py  test_all_courts.py  test_full_session.py  test_original_params.py  test_parameters.py
docs/: development_log.md  product_blueprint.md  project_roadmap.md  user_guide.md
src/: check_availability.py  sms_notifier.py
tests/: test_check_availability.py  test_format_specific_date.py  test_get_court_availability.py  test_parse_availability_data.py
tests/fixtures/: response.json  scheduler.html
