[project]
name = "court-booking"
version = "0.1.0"
description = "Book court from Angus Glen Tennis Center"
authors = [
    {name = "Eric Yang A", email = "eric.a.yang@ericsson.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pytz>=2023.3.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "autopep8>=2.0.4",
    "flake8>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
