[project]
name = "court-booking"
version = "0.1.0"
description = "Check court availability from Angus Glen Tennis Center"
authors = [
    {name = "Chu Yun Fu", email = "fuchuyun@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pytz>=2023.3.post1",
    "twilio>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "autopep8>=2.0.4",
    "flake8>=6.1.0",
]

[project.scripts]
check-availability = "src.check_availability:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
